--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -7,13 +7,30 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarID">
                 {% if user.is_authenticated %}
+                    <div class="navbar-nav offset-md-7">
+                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                    </div>
                     <div class="navbar-nav">
-                        <a class="nav-link muted" aria-current="page" href="{% url 'logout' %}">Logout</a>
+                        <a class="nav-link" aria-current="page" href="#">About</a>
+                    </div>
+                    <div class="navbar-nav">
+                        <a class="nav-link" aria-current="page" href="#">Services</a>
+                    </div>
+                    <div class="navbar-nav">
+                        <a class="nav-link" aria-current="page" href="#">Contact us</a>
+                    </div>
+
+                    <div class="navbar-nav offset-md-1">
+                        <a class="nav-link" aria-current="page" href="{% url 'logout' %}">Logout</a>
                     </div>
                 {% else %}
-                    <div class="navbar-nav">
-                        <a class="nav-link muted" aria-current="page" href="{% url 'home' %}">Login</a>
+                    <div class="navbar-nav offset-md-10">
+                        <a class="nav-link" aria-current="page" href="{% url 'register' %}">Register</a>
                     </div>
+                    <div class="navbar-nav ">
+                        <a class="nav-link" aria-current="page" href="{% url 'home' %}">Login</a>
+                    </div>
+                    
                 {% endif %}
             </div>
         </div>
