--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,11 +1,55 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="col-md-6 offset-md-2">
-    {% if user.is_authenticated %}
-        <h1>hello world</h1>
 
+    <!--when the user is authenticated her what he see-->
+
+    {% if user.is_authenticated %}
+        
+        <div class="table-responsive">
+          <table class="table table-striped table-hover table-bordered">
+            <thead class="table-dark">
+              <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Address</th>
+                <th scope="col">City</th>
+                <th scope="col">State</th>
+                <th scope="col">Zipcode</th>
+                <th scope="col">Created At</th>
+                
+              </tr>
+            </thead>
+            <tbody>
+              
+                 {% if records %}
+
+                 {% for record in records %}
+
+                  <tr>
+                      <td>{{ record.id }}</td>
+                      <td>{{ record.first_name }} {{ record.last_name }}</td>
+                      <td>{{ record.email }}</td>
+                      <td>{{ record.phone_number }}</td>
+                      <td>{{ record.address }}</td>
+                      <td>{{ record.city }}</td>
+                      <td>{{ record.state }}</td>
+                      <td>{{ record.zipcode }}</td>
+                      <td>{{ record.created_at }}</td>
+                      
+              {% endfor %}
+            
+            {% endif %}
+            </tbody>
+          </table>
+        </div>
+        
+         
     {% else %}
+    <!--Ended if the use is authenticated-->
+    <div class="col-md-6 offset-md-2">
     <h1>Login</h1>
     <form method="POST" action="{% url 'home' %}">
         {% csrf_token %}
@@ -23,9 +67,6 @@
         </div>
 
         <button  type="submit" class="btn btn-secondary offset-md-5" >Login</button>
-
-
-
     </form>
     {% endif %}
 </div>
