--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -17,7 +17,7 @@
                         <a class="nav-link" aria-current="page" href="#">Services</a>
                     </div>
                     <div class="navbar-nav">
-                        <a class="nav-link" aria-current="page" href="#">Contact us</a>
+                        <a class="nav-link" aria-current="page" href="#">Contact</a>
                     </div>
 
                     <div class="navbar-nav offset-md-1">
