--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -10,7 +10,7 @@
           <table class="table table-striped table-hover table-bordered">
             <thead class="table-dark">
               <tr>
-                <th scope="col">ID</th>
+                <th scope="col">R_ID</th>
                 <th scope="col">Name</th>
                 <th scope="col">Email</th>
                 <th scope="col">Phone</th>
