--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,25 +1,11 @@
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">Django CRM</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarID"
-                aria-controls="navbarID" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarID">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark p-3">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">EAU Qardo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 {% if user.is_authenticated %}
-                    {% comment %} <div class="navbar-nav offset-md-7">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
-                    </div>
-                    <div class="navbar-nav">
-                        <a class="nav-link" aria-current="page" href="#">About</a>
-                    </div>
-                    <div class="navbar-nav">
-                        <a class="nav-link" aria-current="page" href="#">Services</a>
-                    </div>
-                    <div class="navbar-nav">
-                        <a class="nav-link" aria-current="page" href="#">Contact</a>
-                    </div> {% endcomment %}
-
                      <!--add record-->
                     <div class="navbar-nav offset-md-0">
                         <a class="nav-link" aria-current="page" href="{% url 'add_record' %}">Add Record</a>
